Swedish translation almost complete. Fixed spelling in English strings

--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -615,7 +615,7 @@
 #define TR_MENUCURVE           "CURVE"
 #define TR_MENULOGICALSWITCH   "LOGICAL SWITCH"
 #define TR_MENULOGICALSWITCHES "LOGICAL SWITCHES"
-#define TR_MENUCUSTOMFUNC      "SWITCHES ASSIGNMENT"
+#define TR_MENUCUSTOMFUNC      "SWITCH ASSIGNMENT"
 #define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
 #define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRY"
