More translation fixes

--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -329,7 +329,7 @@
 #define TR_VALARMFN            "<>"
 
 #define LEN_VTELPROTO          "\007"
-#define TR_VTELPROTO           "Aucun  ""Hub\0   ""WSHHigh""Halcyon"
+#define TR_VTELPROTO           "Aucun  ""Hub\0   ""WSHHigh"
 
 #define LEN_VOLTSRC            "\003"
 #define TR_VOLTSRC             "---""A1\0""A2\0""FAS""Cel"
