--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -633,9 +633,9 @@
 #define TR_LONGITUDE           "Dł.   geo."
 #define TR_GPSCOORD            "Typ koordynat GPS"
 #define TR_VARIO               "Wario"
-#define TR_PITCH_AT_ZERO       "\001Pitch at Zero"
-#define TR_PITCH_AT_MAX        "\001Pitch at Max"
-#define TR_REPEAT_AT_ZERO      "\001Repeat at Zero"
+#define TR_PITCH_AT_ZERO       INDENT "Pitch at Zero"
+#define TR_PITCH_AT_MAX        INDENT "Pitch at Max"
+#define TR_REPEAT_AT_ZERO      INDENT "Repeat at Zero"
 #define TR_SHUTDOWN            "Wyłączanie.."
 #define TR_BATT_CALIB          "Kalib:Baterii"
 #define TR_CURRENT_CALIB       " +=\006Kalibracja prądu"
