--- a/radio/src/translations/se.h.txt
+++ b/radio/src/translations/se.h.txt
@@ -633,9 +633,9 @@
 #define TR_LONGITUDE           "Längdgrad"
 #define TR_GPSCOORD            TR("GPS-Koordinater", "GPS-koordinatsystem")
 #define TR_VARIO               TR("Vario", "Variometer")
-#define TR_PITCH_AT_ZERO       "\001Ton vid Noll"
-#define TR_PITCH_AT_MAX        "\001Ton vid Max"
-#define TR_REPEAT_AT_ZERO      "\001Repetera vid Noll"
+#define TR_PITCH_AT_ZERO       INDENT "Ton vid Noll"
+#define TR_PITCH_AT_MAX        INDENT "Ton vid Max"
+#define TR_REPEAT_AT_ZERO      INDENT "Repetera vid Noll"
 #define TR_SHUTDOWN            "STäNGER AV"
 #define TR_BATT_CALIB          "Kalib. Batteri"
 #define TR_CURRENT_CALIB       "Kalib. Ström"
@@ -755,10 +755,10 @@
 #define TR_CLEAR               "Töm"
 #define TR_RESET               "Nollställ"
 #define TR_COUNT               "Antal"
-#define TR_SMOOTH              "Mjuk"
-#define TR_COPY_TRIMS_TO_OFS   "Spara trimmar som offset"
 #define TR_PT                  "pt"
 #define TR_PTS                 "pts"
+#define TR_SMOOTH              "Mjuk"
+#define TR_COPY_TRIMS_TO_OFS   "Spara trimmar som offset"
 #define TR_PERSISTENT_MAH      INDENT "Lagra mAh"
 #define TR_PREFLIGHT           "Startkontroller"
 #define TR_CHECKLIST           INDENT "Visa checklisa"
