--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -633,9 +633,9 @@
 #define TR_LONGITUDE           "Länge:"
 #define TR_GPSCOORD            TR("Gps Koord.","GPS Koordinaten Format")
 #define TR_VARIO               TR("Vario","----Variometer----")
-#define TR_PITCH_AT_ZERO       "\001Pitch at Zero"
-#define TR_PITCH_AT_MAX        "\001Pitch at Max"
-#define TR_REPEAT_AT_ZERO      "\001Repeat at Zero"
+#define TR_PITCH_AT_ZERO       INDENT "Pitch at Zero"
+#define TR_PITCH_AT_MAX        INDENT "Pitch at Max"
+#define TR_REPEAT_AT_ZERO      INDENT "Repeat at Zero"
 #define TR_SHUTDOWN            "Herunterfahren"
 #define TR_BATT_CALIB          "Akku. Kalib."
 #define TR_CURRENT_CALIB       "Stromkalib."
