--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -596,7 +596,7 @@
 #define TR_MENUDIAG            TR("INTERS","TEST INTERRUPTEURS")
 #define TR_MENUANA             TR("ANAS","ENTREES ANALOGIQUES")
 #define TR_MENUCALIBRATION     "CALIBRATION"
-#define TR_TRIMS2OFFSETS       "\006Trims => Offsets"
+#define TR_TRIMS2OFFSETS       "\005Trims => Subtrims"
 #define TR_MENUMODELSEL        "MODELES"
 #define TR_MENUSETUP           TR("CONF. MODELE","CONFIGURATION")
 #define TR_MENUFLIGHTPHASE     "PHASE DE VOL"
@@ -633,9 +633,9 @@
 #define TR_LONGITUDE           "Longitude"
 #define TR_GPSCOORD            TR("Coordonnées","Coordonnées GPS")
 #define TR_VARIO               TR("Vario","Variomètre")
-#define TR_PITCH_AT_ZERO       INDENT "Pitch au Zero"
-#define TR_PITCH_AT_MAX        INDENT "Pitch au Max"
-#define TR_REPEAT_AT_ZERO      INDENT "Repet au Zero"
+#define TR_PITCH_AT_ZERO       INDENT "Tonalité au zéro"
+#define TR_PITCH_AT_MAX        INDENT "Tonalité au max"
+#define TR_REPEAT_AT_ZERO      INDENT "Tonalité au zéro"
 #define TR_SHUTDOWN            "ARRET EN COURS"
 #define TR_BATT_CALIB          "Calib. Batterie"
 #define TR_CURRENT_CALIB       "Calib. Courant"
@@ -653,7 +653,7 @@
 #define TR_INCOMPATIBLE        "Incompatible"
 #define TR_WARNING             "ALERTE"
 #define TR_EEPROMWARN          "EEPROM"
-#define TR_EEPROM_CONVERTING   "EEPROM Converting"
+#define TR_EEPROM_CONVERTING   "Conversion EEPROM"
 #define TR_THROTTLEWARN        "GAZ"
 #define TR_ALARMSWARN          "SON"
 #define TR_SWITCHWARN          TR("INTERS","CONTROLES")
@@ -723,7 +723,7 @@
 #define TR_COPY                "Copier"
 #define TR_MOVE                "Déplacer"
 #define TR_PASTE               "Coller"
-#define TR_DELETE              "Effacer"
+#define TR_DELETE              "Supprimer"
 #define TR_INSERT              "Insérer"
 #define TR_RESET_FLIGHT        TR("Réinit. vol", "Réinitialiser vol")
 #define TR_RESET_TIMER1        TR("Réinit. Timer1", "Réinitialiser Timer1")
@@ -749,16 +749,16 @@
 #define TR_CRITICALALARM       INDENT "Alarme critique"
 #define TR_ENABLE_POPUP        "Activer Popup"
 #define TR_DISABLE_POPUP       "Désactiver Popup"
-#define TR_CURVE_PRESET        "Preset..."
-#define TR_PRESET              "Preset"
-#define TR_MIRROR              "Mirroir"
-#define TR_CLEAR               "Réinitialiser"
-#define TR_RESET               "Reset"
-#define TR_COUNT               "Nb Points"
+#define TR_CURVE_PRESET        "Courbe standard..."
+#define TR_PRESET              "Pente"
+#define TR_MIRROR              "Miroir"
+#define TR_CLEAR               "Effacer"
+#define TR_RESET               "Réinitialiser"
+#define TR_COUNT               "Nb points"
 #define TR_PT                  "pt"
 #define TR_PTS                 "pts"
 #define TR_SMOOTH              "Lissage"
-#define TR_COPY_TRIMS_TO_OFS   "Trims vers offsets"
+#define TR_COPY_TRIMS_TO_OFS   "Trim vers subtrim"
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh", INDENT "Enregistrer mAh")
 #define TR_PREFLIGHT           "Vérifications avant vol"
 #define TR_CHECKLIST           INDENT "Afficher notes"
@@ -847,12 +847,12 @@
 #define TR_CHR_LONG            'l'
 #define TR_CHR_TOGGLE          't'
 #define TR_CHR_HOUR            'h'
-#define TR_CHR_INPUT  'E'   // Values between A-I will work
+#define TR_CHR_INPUT           'E'   // Values between A-I will work
 
-#define TR_BEEP_VOLUME         "Beep Volume"
-#define TR_WAV_VOLUME          "Wav Volume"
-#define TR_VARIO_VOLUME        "Vario Volume"
-#define TR_BG_VOLUME           "Bg Volume"
+#define TR_BEEP_VOLUME         "Volume bips"
+#define TR_WAV_VOLUME          "Volume audio"
+#define TR_VARIO_VOLUME        "Volume vario"
+#define TR_BG_VOLUME           "Volume musique"
 
 #define TR_TOP_BAR             "Barre titre"
 #define TR_ALTITUDE            INDENT "Altitude"
