--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -764,6 +764,9 @@
 #define TR_CHECKLIST           INDENT "Display Checklist"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
 #define TR_UART3MODE           "Serial Port"
+#define TR_SCRIPT              "Script"
+#define TR_INPUTS              "Inputs"
+#define TR_OUTPUTS             "Outputs"
 
 #if defined(MAVLINK)
   #define TR_MAVLINK_RC_RSSI_SCALE_LABEL   "Max RSSI"
