--- a/companion/releasenotes.txt
+++ b/companion/releasenotes.txt
@@ -1,3 +1,10 @@
+<h2>Version 1.52</h2>
+<ul>
+<li>Fix crash when writing certain EEPROMS</li>
+<li>Google Earth export of logs containing GPS positions</li>
+<li>DSM2 added for Taranis</li>
+</ul>
+
 <h2>Version 1.51</h2>
 <ul>
 <li>Wrong DFU-Util default path (MAC)</li>
