--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -649,7 +649,7 @@
 #define TR_DELETE_MODEL        "Supprimer Modèle"
 #define TR_RESTORE_MODEL       "Restaurer Modèle"
 #define TR_SDCARD_ERROR        "Erreur carte SD"
-#define TR_NO_SDCARD           "Pas de carte SD"
+#define TR_NO_SDCARD           "Carte SD indisponible"
 #define TR_INCOMPATIBLE        "Incompatible"
 #define TR_WARNING             "ALERTE"
 #define TR_EEPROMWARN          "EEPROM"
@@ -684,7 +684,7 @@
 #define TR_COPY_FILE           "Copier"
 #define TR_RENAME_FILE         "Renommer"
 #define TR_ASSIGN_BITMAP       "Sélectionner image"
-#define TR_EXECUTE_FILE        "Executer"
+#define TR_EXECUTE_FILE        "Exécuter"
 #define TR_REMOVED             " supprimé"
 #define TR_SD_INFO             "Information"
 #define TR_SD_FORMAT           "Formater"
