--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -648,8 +648,8 @@
 #define TR_BACKUP_MODEL        "Backup Model"
 #define TR_DELETE_MODEL        "Delete Model"
 #define TR_RESTORE_MODEL       "Restore Model"
-#define TR_SDCARD_ERROR        "SDCARD Error"
-#define TR_NO_SDCARD           "No SDCARD"
+#define TR_SDCARD_ERROR        "SD Card Error"
+#define TR_NO_SDCARD           "No SD Card"
 #define TR_INCOMPATIBLE        "Incompatible"
 #define TR_WARNING             "WARNING"
 #define TR_EEPROMWARN          "EEPROM"
