Switch assignments -> Special functions

--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -618,7 +618,7 @@
 #define TR_MENUCURVE           "CURVE"
 #define TR_MENULOGICALSWITCH   "LOGICAL SWITCH"
 #define TR_MENULOGICALSWITCHES "LOGICAL SWITCHES"
-#define TR_MENUCUSTOMFUNC      "SWITCH ASSIGNMENT"
+#define TR_MENUCUSTOMFUNC      "SPECIAL FUNCTIONS"
 #define TR_MENUCUSTOMSCRIPTS   "CUSTOM SCRIPTS"
 #define TR_MENUCUSTOMSCRIPT    "CUSTOM SCRIPT"
 #define TR_MENUTELEMETRY       "TELEMETRY"
@@ -732,7 +732,7 @@
 #define TR_STATISTICS          "Statistics"
 #define TR_ABOUT_US            "About"
 #define TR_AND_SWITCH          "AND Switch"
-#define TR_CF                  "CF"
+#define TR_CF                  "SF"
 #define TR_SPEAKER             INDENT "Speaker"
 #define TR_BUZZER              INDENT "Buzzer"
 #define TR_BYTES               "bytes"
