--- a/radio/src/translations/it.h.txt
+++ b/radio/src/translations/it.h.txt
@@ -575,7 +575,7 @@
 #endif
 
 #define TR_MENUTORESET         CENTER TR_ENTER" x Azzerare"
-#define TR_PPM                 "PPM"
+#define TR_PPM_TRAINER         "TR"
 #define TR_CH                  "CH"
 #define TR_MODEL               "MODELLO"
 #define TR_FP                  "FV"
