--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -421,7 +421,7 @@
 #define TR_VTRAINERMODES       "Master""Esclav"
 
 #define LEN_VFAILSAFE          "\011"
-#define TR_VFAILSAFE           "Guardar\0 ""Adaptar\0 ""Sin pulsos"
+#define TR_VFAILSAFE           "Guardar\0 ""Adaptar\0 ""Sin pulso""Receiver\0"
 
 #if defined(MAVLINK)
   #define LEN_MAVLINK_BAUDS    "\006"
