--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -1,4 +1,4 @@
-/*   German checked 28.02.2014 kleine Änderungen 
+/*   German checked 23.03.2014 Test kleine Änderungen 
  * Authors (alphabetical order)
  * - Bertrand Songis <bsongis@gmail.com>
  * - Bernet Andre <bernet.andre@gmail.com>
@@ -163,16 +163,16 @@
 #define TR_VMIXTRIMS           "AUS""EIN""Sei""Höh""Gas""Que" //Mixer Trim Werte
 
 #if defined(PCBTARANIS)
-  #define TR_CSWTIMER          "Timer"
-  #define TR_CSWSTICKY         "Stcky"
-  #define TR_CSWRANGE          "Range"
-  #define TR_CSWSTAY           "Edge\0"
+  #define TR_CSWTIMER          "Takt\0" // TIM Taktgenerator
+  #define TR_CSWSTICKY         "SRFF\0" // Sticky= RS-Flip-Flop
+  #define TR_CSWRANGE          "Range"  // unklar
+  #define TR_CSWSTAY           "Puls\0" // Edge=einstellbarer Impuls
 #else
-  #define TR_CSWTIMER          "Tim\0 "
-  #define TR_CSWSTICKY         "Glue\0"
+  #define TR_CSWTIMER          "Takt\0" // 
+  #define TR_CSWSTICKY         "SRFF\0" //
   #if defined(CPUARM)
-    #define TR_CSWRANGE        "Rnge\0"
-    #define TR_CSWSTAY         "Edge\0"
+    #define TR_CSWRANGE        "Rnge\0" // 
+    #define TR_CSWSTAY         "Puls\0" //
   #else
     #define TR_CSWRANGE
     #define TR_CSWSTAY
@@ -464,7 +464,7 @@
 #endif
 #define TR_BITMAP              "Modell Bild"
 #define TR_TIMER               TR("Timer","Timer ")
-#define TR_ELIMITS             TR("Erw.Limit","Erweit. Limits")
+#define TR_ELIMITS             TR("Erw.Limit","Erweit. Wege 125%")
 #define TR_ETRIMS              TR("Erw.Trims","Erweit. Trimmung")
 #define TR_TRIMINC             TR("Trim Schr.","Trimm Schritte")
 #define TR_TTRACE              TR("Gasquelle", INDENT "Gas Verfolgung")
@@ -589,7 +589,7 @@
 #define TR_BADEEPROMDATA       "EEPROM ungültig"
 #define TR_EEPROMFORMATTING    "EEPROM Initialisieren"
 #define TR_EEPROMOVERFLOW      "EEPROM Überlauf"
-#define TR_MENURADIOSETUP      TR("SENDER EINST.","SENDER GRUNGEINSTELLUNGEN")
+#define TR_MENURADIOSETUP      TR("SENDER EINST.","SENDER GRUNDEINSTELLUNGEN")
 #define TR_MENUDATEANDTIME     "DATUM UND ZEIT"
 #define TR_MENUTRAINER         TR("Lehr./Schül.","LEHRER/SCHÜLER")
 #define TR_MENUVERSION         "VERSION"
